Make some CSS updates.
Next: work on displaying info

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,16 @@
 <html>
 <head lang="en">
 
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/1280px-International_Pok%C3%A9mon_logo.svg.png"
+         class="Logo">
+
+
+    <img src="https://camo.githubusercontent.com/1a4b11888ddf9f2b7a9353d6b69503e634e8704c/68747470733a2f2f692e696d6775722e636f6d2f415975745a4f462e706e67"
+
+    class="headerM">
+
+
     <meta charset="utf-8">
     <title>Pokedex</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -10,8 +20,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body ng-app="pokedir">
-    <div class="container-fluid">
-
+<div class="container-fluid">
         <h1>Pokedex</h1>
         <div id="directory" ng-controller="pokeCtrl">
             <div ng-repeat="x in pokemons">
